# writer

./: .editorconfig  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  Writer.avprj  com.github.ryonakano.writer.yml  meson.build  meson_options.txt  run.sh
.github/workflows/: main.yml
data/: Application.css  CMakeLists.txt  com.github.ryonakano.writer.appdata.xml.in  com.github.ryonakano.writer.desktop.in  com.github.ryonakano.writer.gresource.xml  com.github.ryonakano.writer.gschema.xml  meson.build  writer.appdata.xml.in  writer.desktop  writer.desktop.in
meson/: post_install.py
po/: CMakeLists.txt  POTFILES  com.github.ryonakano.writer.pot  fr.po  nl.po  pt.po  pt_BR.po
po/extra/: POTFILES  extra.pot  fr.po  meson.build  nl.po  pt.po  pt_BR.po
scripts/: build.sh  install.sh  only-run.sh  run.sh  uninstall.sh
src/: Application.vala  MainWindow.vala  PrintManager.vala  Writer.vala  config.vala  config.vala.cmake  config.vala.in  desktop-launcher.vala
src/Utils/: Document.vala  Editor.vala  Encoding.vala  File.vala  FileChooser.vala  FileExporter.vala  RTFParser.vala  RTFWriter.vala  Stylesheet.vala  TextEditor.vala  TextRange.vala  ZeitgeistLogger.vala
src/Views/: EditorView.vala  WelcomeView.vala
src/Widgets/: ActionBar.vala  ButtonGroup.vala  EditorToolBar.vala  EditorView.vala  ImageToolBar.vala  PreferenceDialog.vala  PreferenceWindow.vala  TableChooser.vala  TableToolBar.vala  TextToolBar.vala  TitleBar.vala  ToolBar.vala  WelcomeView.vala
src/Widgets/Choosers/: TableChooser.vala
src/Widgets/ToolBars/: ImageToolBar.vala  TableToolBar.vala  TextToolBar.vala  ToolBarImage.vala
